2011-11-25 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/module_manager.php: Incremented agent description
	in this view.

	Fixes: #3424395

2011-11-25 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_agents.php
	 operation/menu.php
	 operation/gis_maps/render_view.php
	 operation/gis_maps/index.php
	 godmode/gis_maps/index.php: Fixed a problem with agent groups in 
	 gis maps.
	 
	 Fixes: #3438313

2011-11-25  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_gd.php: Fixed rounded corners in progress bar
	graphs for bug 3442005

2011-11-25 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_agents.php: Fixed sql error in agents_get_agents
	function.

2011-11-25 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/module_manager.php: Fixed an sql error.

2011-11-25  Sergio Martin <sergio.martin@artica.es>

	* include/functions_config.php: Fixed API IP list of
	access entities bug

2011-11-24  Sergio Martin <sergio.martin@artica.es>

	* include/functions_api.php
	include/functions.php
	include/functions_agents.php
	operation/search_modules.php
	operation/agentes/status_monitor.php
	operation/agentes/estado_ultimopaquete.php
	operation/agentes/alerts_status.php
	operation/agentes/estado_generalagente.php
	operation/agentes/estado_agente.php
	operation/agentes/estado_monitores.php
	operation/agentes/ver_agente.php
	operation/search_agents.php
	operation/search_alerts.php
	godmode/agentes/module_manager.php
	godmode/agentes/modificar_agente.php
	godmode/agentes/configurar_agente.php
	godmode/alerts/alert_list.list.php
	godmode/users/configure_user.php: Reconstruct policy acl
	system to allow in enterprise version get extra access for 
	a user in a policy

2011-11-24  Sergio Martin <sergio.martin@artica.es>

	* include/help/en/help_integria_url.php
	include/help/es/help_integria_url.php
	godmode/setup/setup.php: Added help for integria api
	url in setup
